# tensorneat

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  aaai_exp.py  exp_for_hardwares.py  function_factory.py  jit_pipeline.py  paper.txt  pipeline.py  pipeline_jitable_env.py  pipeline_time.py  pyproject.toml  recommend_environment.txt  t.py
algorithm/: __init__.py  base.py  config.py  default_config.ini  state.py  utils.py
config/: config.py  default_config.ini
configs/: __init__.py  activations.py  aggregations.py  configer.py  default_config.ini
core/: __init__.py  algorithm.py  gene.py  genome.py  problem.py  substrate.py
docs/: conf.py  index.rst  requirements.txt
evox_adaptor/: __init__.py  gym_no_distribution.py  neat.py
examples/: a.py  b.py  brax_env.py  brax_render.py  config_test.py  debug.py  distance_test.py  enhane_xor.py  error_forward_fix.py  evox_test.py  final_design_experiement.py  final_design_experiment2.py  fix_too_large_distance.py  function_tests.py  general_xor.py  genome_test.py  jax_playground.py  jit_xor.py  jitable_speciate_t.py  rnn_forward_test.py  state_test.py  test.py  time_utils.py  tmp.py  tmp2.py  xor.ini  xor.py  xor3d.ini  xor3d.py  xor_hyperNEAT.py  xor_hyperneat.py  xor_recurrent.py  xor_test.py
mo/: __init__.py  mo_neat.py  nsga2_utils.py  run_xor.py  run_xor_final.py  run_xor_quick.py
neat/: __init__.py  function_factory.py  operations.py  pipeline.py  pipeline_.py  population.py  species.py
problem/: __init__.py  base.py
problems/: __init__.py  problem.py
tensorneat/: pipeline.py  tmp.ipynb
(+429 files in other folders)
