[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tensorneat = ["*.txt", "*.json"]

[project]
name = "tensorneat"
version = "0.1.0"
authors = [{ name = "Lishuang Wang", email = "wanglishuang22@gmail.com" }]
description = "tensorneat"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "brax >= 0.10.3",
    "jax >= 0.4.28",
    "gymnax >= 0.0.8",
    "jaxopt >= 0.8.3",
    "optax >= 0.2.2",
    "flax >= 0.8.4",
    "mujoco >= 3.1.4",
    "mujoco-mjx >= 3.1.4",
]

[project.urls]
"Homepage" = "https://github.com/EMI-Group/tensorneat"
"Bug Tracker" = "https://github.com/EMI-Group/tensorneat/issues"
